Added portalRegions route
